Terminal Fix lint errors and warnings
Renamed package `com.pi.ole.myplanet.lite` to `org.ole.planet.myplanet.lite`
- Moved source files to `org/ole/planet/myplanet/lite`
- Renamed `MainActivity.kt` to `MyPlanetLite.kt`
- Updated `AndroidManifest.xml` and `build.gradle.kts`
- Updated all import statements and layout references
- Added `org.json:json` dependency for unit tests
- Renamed `MainActivityAuthTest.kt` to `MyPlanetLiteAuthTest.kt`

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">myPlanet Lite</string>
     <string name="app_name_prefix">myPlanet</string>
     <string name="app_name_suffix">Lite</string>
